fix(style): collapse table borders

--- a/templates/style.css
+++ b/templates/style.css
@@ -97,6 +97,7 @@ h2 {
 
 table {
   width: 900px;
+  border-collapse: collapse;
 }
 
 thead th {
